--- a/WpfApp2/WpfApp2.csproj
+++ b/WpfApp2/WpfApp2.csproj
@@ -166,7 +166,7 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Resource Include="Fonts\Azonix.otf" />
+    <Resource Include="Fonts\azonix.ttf" />
     <None Include="Model\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </None>
