--- a/WpfApp2/WpfApp2.csproj
+++ b/WpfApp2/WpfApp2.csproj
@@ -184,6 +184,8 @@
     <Resource Include="Images\Döner_Kebab_in_Istanbul.jpg" />
     <Resource Include="Images\ui-bg.jpg" />
     <Resource Include="Images\ui-bg-red.jpg" />
+    <Resource Include="Images\ui-bg-green.jpg" />
+    <Resource Include="Images\user-image.jpeg" />
     <Content Include="Model\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Model1.Context.cs</LastGenOutput>
