--- a/WpfApp2/App.config
+++ b/WpfApp2/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <add name="Task1DBEntities" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-KVSP5S9\SQLEXPRESS;initial catalog=Task1DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AuthDBEntities3" connectionString="metadata=res://*/Model.AuthDBModel.csdl|res://*/Model.AuthDBModel.ssdl|res://*/Model.AuthDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-467GVQM\SQLEXPRESS;initial catalog=AuthDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
