--- a/WpfApp2/WpfApp2.csproj
+++ b/WpfApp2/WpfApp2.csproj
@@ -108,6 +108,24 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Core\MyFrame.cs" />
+    <Compile Include="Model\AuthDBModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AuthDBModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\AuthDBModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AuthDBModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\AuthDBModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AuthDBModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Model\User.cs">
+      <DependentUpon>AuthDBModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="ViewModel\LoginUCViewModel.cs" />
     <Compile Include="View\MainUserControl\LoginUC.xaml.cs">
       <DependentUpon>LoginUC.xaml</DependentUpon>
@@ -143,6 +161,13 @@
     </EmbeddedResource>
     <Resource Include="Fonts\azonix.ttf" />
     <Resource Include="Fonts\arialroundedmtbold.ttf" />
+    <EntityDeploy Include="Model\AuthDBModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>AuthDBModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Model\AuthDBModel.edmx.diagram">
+      <DependentUpon>AuthDBModel.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -151,9 +176,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Döner_Kebab_in_Istanbul.jpg" />
@@ -166,6 +188,19 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Model\AuthDBModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>AuthDBModel.edmx</DependentUpon>
+      <LastGenOutput>AuthDBModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Model\AuthDBModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>AuthDBModel.edmx</DependentUpon>
+      <LastGenOutput>AuthDBModel.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.7.0-ci350\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.7.0-ci350\build\MaterialDesignThemes.targets')" />
